# timerboard

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json  tailwind.css
.github/workflows/: docker-build.yml
assets/: tailwind.css
entity/: Cargo.toml
entity/src/entities/: channel_fleet_list.rs  discord_guild.rs  discord_guild_channel.rs  discord_guild_role.rs  discord_user.rs  fleet.rs  fleet_category.rs  fleet_category_access_role.rs  fleet_category_channel.rs  fleet_category_ping_role.rs  fleet_field_value.rs  fleet_message.rs  mod.rs  ping_format.rs  ping_format_field.rs  ping_format_field_value.rs  prelude.rs  tower_sessions.rs  user.rs  user_discord_guild.rs  user_discord_guild_role.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251210_000001_create_user_table.rs  m20251210_000001_discord_user.rs  m20251211_000002_create_discord_guild_table.rs  m20251211_000003_create_discord_guild_role_table.rs  m20251211_000004_create_user_discord_guild_table.rs  m20251211_000005_create_user_discord_guild_role_table.rs  m20251211_000006_create_discord_guild_channel_table.rs  m20251211_000007_create_discord_guild_channel_table.rs  m20251212_000007_create_ping_format_table.rs  m20251212_000008_create_ping_format_fields_table.rs  m20251212_000008_create_ping_format_table.rs  m20251212_000009_create_fleet_category_table.rs  m20251212_000009_create_ping_format_fields_table.rs  m20251212_000010_create_fleet_category_access_role_table.rs  m20251212_000011_create_fleet_category_ping_role_table.rs  m20251212_000012_create_fleet_category_channel_table.rs  m20251212_000013_create_fleet_table.rs  m20251212_000014_create_fleet_field_value_table.rs  m20251212_000015_create_fleet_message_table.rs  m20251216_000016_create_channel_fleet_list.rs  m20251225_000019_add_value_type_to_ping_format_fields.rs  m20251225_000020_create_ping_format_field_values.rs
src/: main.rs
src/client/: app.rs  mod.rs  router.rs
src/client/api/: category.rs  discord.rs  discord_guild.rs  fleet.rs  fleet_category.rs  helper.rs  mod.rs  ping_format.rs  ping_group.rs  user.rs
src/client/component/: fullscreen_modal.rs  header.rs  layout.rs  mod.rs  modal.rs  page.rs  pagination.rs  protected_layout.rs  searchable_dropdown.rs  utc_datetime_input.rs
src/client/component/modal/: confirmation_modal.rs  fullscreen_modal.rs  mod.rs
src/client/model/: auth.rs  cache.rs  error.rs  mod.rs
src/client/route/: admin.rs  home.rs  login.rs  mod.rs
src/client/route/admin/: mod.rs  timerboard.rs  user.rs  users.rs
src/client/route/admin/server/: fleet_category.rs  mod.rs
src/client/route/home/: category_selection_modal.rs  create_fleet_button.rs  fleet_creation_modal.rs  fleet_table.rs  mod.rs
src/client/route/home/component/: category_selection_modal.rs  create_fleet_button.rs  fleet_table.rs  mod.rs
src/client/route/home/fleet_modals/: fleet_creation_modal.rs  form_fields.rs  mod.rs  view_edit_modal.rs
src/model/: api.rs  category.rs  discord.rs  fleet.rs  mod.rs  ping_format.rs  user.rs
src/server/: config.rs  error.rs  mod.rs  router.rs  startup.rs  state.rs
src/server/bot/: mod.rs  start.rs
src/server/bot/handler/: channel.rs  guild.rs  member.rs  message.rs  mod.rs  ready.rs  role.rs
src/server/controller/: admin.rs  auth.rs  category.rs  discord.rs  fleet.rs  mod.rs  ping_format.rs  ping_group.rs  user.rs
src/server/controller/fleet/: mod.rs
src/server/data/: category.rs  channel_fleet_list.rs  discord.rs  fleet.rs  fleet_message.rs  mod.rs  ping_format.rs  ping_group.rs  user.rs  user_category_permission.rs
src/server/data/discord/: channel.rs  guild.rs  guild_member.rs  mod.rs  role.rs  user.rs  user_guild.rs  user_guild_role.rs
src/server/data/discord/test/: mod.rs
src/server/data/fleet/: category.rs
src/server/data/ping_format/: field.rs  format.rs  mod.rs
src/server/data/ping_format/test/: create.rs  delete.rs  exists_in_guild.rs  get_all_by_guild_paginated.rs  get_fleet_category_count.rs  mod.rs  update.rs
src/server/data/test/: mod.rs
src/server/data/test/category/: create.rs  delete.rs  get_by_guild_id_paginated.rs  get_by_id.rs  mod.rs  update.rs
src/server/data/test/channel_fleet_list/: get_by_channel_id.rs  mod.rs  upsert.rs
src/server/data/test/fleet/: create.rs  delete.rs  get_by_id.rs  get_paginated_by_guild.rs  mod.rs  update.rs
src/server/data/test/user/: admin_exists.rs  find_by_discord_id.rs  get_all_admins.rs  get_all_paginated.rs  mod.rs  set_admin.rs  update_role_sync_timestamp.rs  update_role_sync_timestamps.rs  upsert.rs
src/server/error/: auth.rs  config.rs  internal.rs  mod.rs
src/server/middleware/: auth.rs  session.rs
src/server/middleware/test/auth/: mod.rs  (+1 more)
src/server/model/: category.rs  channel_fleet_list.rs  fleet.rs  fleet_message.rs  mod.rs  ping_format.rs  ping_group.rs  user.rs
src/server/model/discord/: channel.rs  guild.rs  guild_member.rs  mod.rs  role.rs  user_guild_role.rs
src/server/scheduler/: fleet_notifications.rs  mod.rs
src/server/service/: admin.rs  auth.rs  category.rs  discord.rs  fleet.rs  fleet_notification.rs  mod.rs  ping_format.rs  user.rs
src/server/service/admin/: bot.rs  code.rs  mod.rs
src/server/service/auth/: callback.rs  login.rs  mod.rs
src/server/service/discord/: channel.rs  guild.rs  guild_member.rs  mod.rs  role.rs  user_guild.rs  user_guild_role.rs
src/server/service/fleet/: category.rs
src/server/service/fleet_notification/: builder.rs  cancel.rs  creation.rs  formup.rs  list.rs  mod.rs  posting.rs  reminder.rs  update.rs
src/server/service/oauth/: login.rs  mod.rs
src/server/service/ping_format/: format.rs  mod.rs
src/server/util/: parse.rs
test-utils/: Cargo.toml
test-utils/src/: builder.rs  context.rs  lib.rs
test-utils/src/factory/: discord_guild.rs  fleet.rs  fleet_category.rs  helpers.rs  mod.rs  ping_format.rs  ping_format_field.rs  user.rs  user_discord_guild_role.rs
test-utils/src/fixture/: fleet_category.rs  mod.rs  ping_format_field.rs  user_discord_guild_role.rs
test-utils/src/serenity/: guild.rs  mod.rs  role.rs
(+62 files in other folders)
