[package]
name = "eve_discord_timerboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = { version = "0.8.6", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-free-icons = { version = "0.10.0", features = [
  "font-awesome-brands",
  "font-awesome-solid"
] }
dioxus-logger = "0.7.1"
dotenvy = { version = "0.15.7", optional = true }
entity = { path = "entity", optional = true }
migration = { path = "migration", optional = true }
oauth2 = { version = "5.0.0", optional = true }
rand = { version = "0.9.2", optional = true }
reqwasm = { version = "0.5.0", optional = true }
reqwest = { version = "0.12.25", optional = true }
sea-orm = { version = "2.0.0-rc.11", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
serenity = { version = "0.12.4", optional = true }
thiserror = { version = "2.0.17", optional = true }
time = { version = "0.3.44", optional = true }
tokio = { version = "1.48.0", optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"], optional = true }
url = { version = "2.5.7", optional = true }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "axum",
  "dioxus/server",
  "dotenvy",
  "entity",
  "migration",
  "oauth2",
  "rand",
  "reqwest",
  "sea-orm",
  "serenity",
  "thiserror",
  "time",
  "tokio",
  "tower-sessions",
  "tower-sessions-sqlx-store",
  "url"
]
web = ["dioxus/web", "reqwasm", "serde_json"]
