[package]
name = "timerboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration", "test-utils"]

[workspace.dependencies]
sea-orm = { version = "2.0.0-rc.11" }
serde_json = { version = "1.0.145" }
serenity = { version = "0.12.4" }
thiserror = { version = "2.0.17" }

[dependencies]
axum = { version = "0.8.6", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
dioxus-cli-config = "0.7.2"
dioxus-free-icons = { version = "0.10.0", features = [
  "font-awesome-brands",
  "font-awesome-solid"
] }
dioxus-logger = "0.7.1"
dotenvy = { version = "0.15.7", optional = true }
entity = { path = "entity", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
migration = { path = "migration", optional = true }
oauth2 = { version = "5.0.0", optional = true }
pulldown-cmark = "0.9.6"
rand = { version = "0.9.2", optional = true }
reqwasm = { version = "0.5.0", optional = true }
reqwest = { version = "0.12.25", optional = true }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono"
], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true, optional = true }
serenity = { workspace = true, optional = true }
test-utils = { path = "test-utils", optional = true }
thiserror = { workspace = true, optional = true }
time = { version = "0.3.44", optional = true }
tokio = { version = "1.48.0", optional = true }
tokio-cron-scheduler = { version = "0.15.1", optional = true }
tower_governor = { version = "0.8.0", optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"], optional = true }
url = { version = "2.5.7", optional = true }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "axum",
  "dioxus/server",
  "dotenvy",
  "entity",
  "migration",
  "oauth2",
  "rand",
  "reqwest",
  "sea-orm",
  "serenity",
  "test-utils",
  "thiserror",
  "time",
  "tokio",
  "tokio-cron-scheduler",
  "tower_governor",
  "tower-http",
  "tower-sessions",
  "tower-sessions-sqlx-store",
  "url",
  "utoipa",
  "utoipa-axum",
  "utoipa-swagger-ui"
]
web = ["dioxus/web", "gloo-timers", "reqwasm", "serde_json"]
