[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "test_utils"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
entity = { path = "../entity" }
sea-orm = { workspace = true, features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "with-chrono"
] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
